--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
     compile group: 'org.webjars', name: 'jquery', version: '3.4.1'
     implementation('org.modelmapper:modelmapper:2.3.0')
