--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.database.url = jdbc:mysql://localhost:3306/foreignexchange
+spring.database.username = root
+spring.database.password = admin
